# asd_lab_2.6

./: CMakeLists.txt  README.md  main.c
src/: X_routines.h  consts_n_structures.h  graph_draw.h  graph_functions.h  matrix_math.h  prime_algorithm.h  vec_math_lib.h
src/c files/: X_routines.c  graph_draw.c  graph_functions.c  matrix_math.c  prime_algorithm.c  prime`s_algorithm.c  vec_math_lib.c
